--- a/css/site.css
+++ b/css/site.css
@@ -11,22 +11,11 @@
 
 * {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
-    overflow-wrap: break-word;
-    hyphens: auto;
-}
-
-a {
-    color: inherit;
-    text-decoration: none;
-}
-
-ul {
-    list-style: none;
 }
 
 .cus-img {
-    width: 80px;
-    height: 80px;
+    width: 50px;
+    height: 50px;
     border: 1px solid black;
-    border-radius: 100px;
+    border-radius: 100%;
 }
